Switched to sam-1.29, removed custom picard build
git-svn-id: svn://svn.code.sf.net/p/genomeview/code/genomeview/trunk@1112 6512a8d4-c03c-0410-a19d-ba0f7ff4f5ce